fix: Improve readability of volunteer testimonial

--- a/css/volunteer.css
+++ b/css/volunteer.css
@@ -134,15 +134,18 @@ body {
 }
 
 .spotlight-text blockquote {
-    font-size: 1.2em;
+    font-size: 1.4em;
     margin: 0;
-    font-style: italic;
+    font-style: normal;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .spotlight-text cite {
     display: block;
     margin-top: 15px;
     font-weight: bold;
+    font-size: 1.1em;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 /* How to Get Started */
